@@ -1,5 +1,6 @@
 == 0.0.2
-* Changed description in gemspec
+* Intent specific API calls functional.
+* Changed description in gemspec.
 * Implemented API call to get specific information from a sent message from it's given ID (GET).
 * Change results to be returned as specific objects that inherit from the original class Result.
   Message, Intent, Entity, Expression are the specific wrappers for results.
